# usb-tester

./: .gitmodules
hardware/: fp-lib-table  mod-lqfp48-cache.lib  mod-lqfp48.kicad_pcb  mod-lqfp48.pro  mod-lqfp48.sch  mod-lqfp64-cache.lib  mod-lqfp64.kicad_pcb  mod-lqfp64.pro  mod-lqfp64.sch  parts.dcm  parts.lib  sym-lib-table  usb-tester-cache.lib  usb-tester.kicad_pcb  usb-tester.pro  usb-tester.sch
hardware/gerber/mod-lqfp48/: mod-lqfp48.DRL  mod-lqfp48.GBL  mod-lqfp48.GBO  mod-lqfp48.GBS  mod-lqfp48.GKO  mod-lqfp48.GTL  mod-lqfp48.GTO  mod-lqfp48.GTS
hardware/gerber/mod-lqfp64/: mod-lqfp64.DRL  mod-lqfp64.GBL  mod-lqfp64.GBO  mod-lqfp64.GBS  mod-lqfp64.GKO  mod-lqfp64.GTL  mod-lqfp64.GTO  mod-lqfp64.GTS
hardware/gerber/usb-tester/: usb-tester-B_Cu.gbr  usb-tester-B_Mask.gbr  usb-tester-B_SilkS.gbr  usb-tester-Edge_Cuts.gbr  usb-tester-F_Cu.gbr  usb-tester-F_Mask.gbr  usb-tester-F_SilkS.gbr  usb-tester.drl
software/: Cargo.toml
software/usb-switch-cli/: Cargo.toml
software/usb-switch-cli/src/: device.rs  main.rs  stboot.rs
software/usb-switch-common/: Cargo.toml
software/usb-switch-common/src/: lib.rs
software/usb-switch-fw/: Cargo.toml
software/usb-switch-fw/src/: control.rs  main.rs
