[package]
name = "usb-switch-cli"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libusb = "0.3.0"
usb-switch-common = { path = "../usb-switch-common" }
serialport = "3.3.0"
