[package]
name = "usb-switch-fw"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f1xx-hal = { version = "0.5", features = ["stm32f103", "stm32-usbd", "rt"] }
panic-semihosting = "0.5"
usb-device = "0.2.4"
usbd-serial = "0.1"
embedded-hal = "0.2.3"

[dependencies.usb-switch-common]
path = "../usb-switch-common"
